--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tuhin.web</title>
-    <link rel="stylesheet" href="/assets/css/footer.css">
-    <link rel="stylesheet" href="/assets/css/header.css">
-    <link rel="stylesheet" href="/assets/css/main.css">
-    <link rel="stylesheet" href="/assets/css/sidebar.css">
-    <link rel="stylesheet" href="/assets/css/responsive.css">
-    <link rel="stylesheet" href="/assets/fonts/fontawesome-free-7.0.0-web/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/footer.css">
+    <link rel="stylesheet" href="../assets/css/header.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/sidebar.css">
+    <link rel="stylesheet" href="../assets/css/responsive.css">
+    <link rel="stylesheet" href="../assets/fonts/fontawesome-free-7.0.0-web/css/all.min.css">
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.7.0/fonts/remixicon.css"
     rel="stylesheet"
@@ -111,7 +111,7 @@
                                 <div class="left-side-img">
                                      <div class="img-to-text">
                                         <div class="about_me_header_top">About me <i class="fa-regular fa-address-card"></i></div>
-                                        <img src="/imgs/aboutMe-laptop.png" alt="about me image">
+                                        <img src="../imgs/aboutMe-laptop.png" alt="about me image">
                                      </div>
                                      <div class="img-to-text-two">
                                         <div class="img-to-text-two-wraper">
@@ -310,8 +310,8 @@
     </footer>
 
 
-    <script type="module" src="/assets/js/app.js"></script>
-    <script type="module" src="/assets/js/data.js"></script>
-    <script src="assets/js/data.js"></script>
+    <script type="module" src="../assets/js/app.js"></script>
+    <script type="module" src="../assets/js/data.js"></script>
+    <script src="../assets/js/data.js"></script>
 </body>
 </html>
