--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
                                      <div class="img-to-text-two">
                                         <div class="img-to-text-two-wraper">
                                                 <p class="MyName">Md Tuhin</p>
-                                                <img class="img-about-grid-two"src="/imgs/aboutMe-laptop-setup.png" alt="">
+                                                <img class="img-about-grid-two"src="../imgs/aboutMe-laptop-setup.png" alt="">
                                         </div>
                                      </div>
                                 </div>
