--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
                                 <div class="left-side-img">
                                      <div class="img-to-text">
                                         <div class="about_me_header_top">About me <i class="fa-regular fa-address-card"></i></div>
-                                        <img src="../imgs/aboutMe-laptop.png" alt="about me image">
+                                        <img src="imgs/aboutMe-laptop.png" alt="about me image">
                                      </div>
                                      <div class="img-to-text-two">
                                         <div class="img-to-text-two-wraper">
                                                 <p class="MyName">Md Tuhin</p>
-                                                <img class="img-about-grid-two"src="../imgs/aboutMe-laptop-setup.png" alt="">
+                                                <img class="img-about-grid-two"src="imgs/aboutMe-laptop-setup.png" alt="">
                                         </div>
                                      </div>
                                 </div>
@@ -310,8 +310,8 @@
     </footer>
 
 
-    <script type="module" src="../assets/js/app.js"></script>
-    <script type="module" src="../assets/js/data.js"></script>
-    <script src="../assets/js/data.js"></script>
+    <script type="module" src="assets/js/app.js"></script>
+    <script type="module" src="assets/js/data.js"></script>
+    <script src="assets/js/data.js"></script>
 </body>
 </html>
