--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             </div>
             <div class="footer-body">
                 <div class="contact-links">
-                    <a target="_blank"href="https://github.com/tuhin1272"><i class="fa-brands fa-github"></i></a>
+                    <a target="_blank"href="https://github.com/TuhinCds"><i class="fa-brands fa-github"></i></a>
                     <a target="_blank"href="mailto:tuhin433@gmail.com?subject=Hello&body=I want to talk to you"><i class="fa-regular fa-envelope"></i></a>
                     <a href="tel:+8801314383497" target="_blank"><i class="fa-solid fa-phone"></i></a>
                 </div>
