--- a/index.html
+++ b/index.html
@@ -271,14 +271,14 @@
                                 </div>
                                 <div class="contact-child-con">
                                     <div class="contact-icon-con">
-                                        <a target="_blank"href="https://github.com/tuhin1272"><i class="fa-brands fa-github-alt"></i></a>
+                                        <a target="_blank"href="https://github.com/TuhinCds"><i class="fa-brands fa-github-alt"></i></a>
                                     </div>
                                     <div class="contact-body-section-con">
                                         <div class="contact-body-section-wraper">
                                         <div class="title-contact-con">Github</div>
                                         <div class="descreption-contact-con">This is my github profile</div>
                                         <div class="link-body-con">
-                                            <a target="_blank"href="https://github.com/tuhin1272">https://github.com/tuhin27</a>
+                                            <a target="_blank"href="https://github.com/TuhinCds">https://github.com/tuhin27</a>
                                         </div>
                                         </div>
                                     </div>
