--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <a href="#" class="btn-secondary">View Projects</a>
                             </div>
                             <div class="contact-data">
-                                    <a target="_blank"href="https://github.com/tuhin1272"><i class="fa-brands fa-github"></i></a>
+                                    <a target="_blank"href="https://github.com/TuhinCds"><i class="fa-brands fa-github"></i></a>
                                     <a target="_blank"href="mailto:tuhin433@gmail.com?subject=Hello&body=I want to talk to you"><i class="fa-solid fa-envelope"></i></a>
                                     <a href="tel:+8801314383497" target="_blank"><i class="fa-solid fa-phone"></i></a>
                             </div>
@@ -278,7 +278,7 @@
                                         <div class="title-contact-con">Github</div>
                                         <div class="descreption-contact-con">This is my github profile</div>
                                         <div class="link-body-con">
-                                            <a target="_blank"href="https://github.com/TuhinCds">https://github.com/tuhin27</a>
+                                            <a target="_blank"href="https://github.com/TuhinCds">https://github.com/TuhinCds</a>
                                         </div>
                                         </div>
                                     </div>
