--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     <a href="tel:+8801314383497" target="_blank"><i class="fa-solid fa-phone"></i></a>
                 </div>
                 <div class="copyright-container">
-                    <p>© 2025 Tuhin All rights reserved. | Designed with ❤️ using Tailwind CSS</p>
+                    <p>© 2025 Tuhin • Frontend Developer | Always Learning, ❤️ Always Building.</p>
                 </div>
             </div>
         </div>
