--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     rel="stylesheet"
 />
 <link rel="manifest" href="manifest.json">
-<link rel="icon" type="image/png" href="favicon.png">
-<link rel="apple-touch-icon" href="icon-192.png">
+<link rel="icon" type="image/png" href="imgs/LogoBig1.png">
+<link rel="apple-touch-icon" href="imgs/LogoBig1.png">
 <meta name="theme-color" content="#ffffff">
 
 </head>
