--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <link rel="manifest" href="manifest.json">
 <link rel="icon" sizes="192x192" type="image/png" href="imgs/LogoBig1.png">
 <link rel="apple-touch-icon" href="imgs/LogoBig1.png">
+<meta name="theme-color" content="#000000">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
 
 </head>
 <body>
