--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black">
 
+<link rel="preload" href="assets/css/style.css" as="style">
+<link rel="preload" href="assets/js/app.js" as="script">
+<link rel="preload" href="assets/css/header.css" as="style">
+<link rel="preload" href="assets/js/data.js" as="script">
+
 </head>
 <body>
     <div id="overly"></div>
