--- a/index.html
+++ b/index.html
@@ -316,6 +316,7 @@
                 </div>
                 <div class="copyright-container">
                     <p>© 2025 Tuhin • Frontend Developer | Always Learning, ❤️ Always Building.</p>
+                    <p>Iam tuhin as a developer</p>
                 </div>
             </div>
         </div>
