--- a/index.html
+++ b/index.html
@@ -138,13 +138,13 @@
                                             Iam a passionate web developer with a knack for creating engaging and user-friendly websites.
                                         </div>
                                         <div class="right-side-text-data">
-                                           Hey! I’m Md Tuhin, a young developer and tech explorer who loves turning ideas into real, functional creations. I’m genuinely passionate about technology—whether it’s coding, electronics, or building smart systems—and I enjoy learning how things work behind the scenes.
+                                           Hey! I'm Md Tuhin, a young developer and tech explorer who loves turning ideas into real, functional creations. I'm genuinely passionate about technology—whether it's coding, electronics, or building smart systems—and I enjoy learning how things work behind the scenes.
 
-I see technology as a space where creativity meets logic. That’s why I spend my time experimenting with new concepts, learning modern development skills, and building projects that help me grow step by step. From web development to automation and innovative tech solutions, I’m always excited to create something meaningful.
+I see technology as a space where creativity meets logic. That's why I spend my time experimenting with new concepts, learning modern development skills, and building projects that help me grow step by step. From web development to automation and innovative tech solutions, I'm always excited to create something meaningful.
 
-I believe progress comes from curiosity, consistency, and the courage to try. Every project I build, no matter how small, teaches me something new and pushes me closer to the future I’m working for.
+I believe progress comes from curiosity, consistency, and the courage to try. Every project I build, no matter how small, teaches me something new and pushes me closer to the future I'm working for.
 
-In short: I love learning, I love building, and I’m committed to becoming better every single day. 🚀
+In short: I love learning, I love building, and I'm committed to becoming better every single day. 🚀
                                         </div>
                                         <div class="education">
                                             <div class="education-container">
